compiler/testData/asJava/lightClasses/lightClassByFqName/compilationErrors/PrivateInTrait.kt
// PrivateInTrait

interface PrivateInTrait {
    private var nn: String
        get() = ""
        set(konstue) {}
    private konst n: String?
        get() = ""
    private fun bar(a: String, b: String?): String?
}